# figma-component-dsl

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  package-lock.json  package.json  plan.md  tsconfig.base.json  tsconfig.json  vitest.config.ts
.claude/: launch.json  mcp.json  settings.json
docs/: dsl-reference.md  figma-html-renderer.md  figma-sync.md  figma_design_playground.md  pipeline-improvement-ideas.md  validation-loosening-report.md
examples/: abstract-geometric-page.dsl.ts  airline-booking-page.dsl.ts  aman-kyoto-page.dsl.ts  amazon-hatsuuri-banner.dsl.ts  analytics-dashboard-page.dsl.ts  analytics-dashboard.dsl.ts  anime-manga-store-page.dsl.ts  art-deco-page.dsl.ts  art-gallery-page.dsl.ts  badge-variants.dsl.ts  bandai-namco-page.dsl.ts  banking-app-page.dsl.ts  bape-streetwear-page.dsl.ts  bento-grid-page.dsl.ts  book-store-page.dsl.ts  boolean-icon.dsl.ts  botanical-page.dsl.ts  brutalist-page.dsl.ts  budget-tracker-page.dsl.ts  button.dsl.ts  calendar-app-page.dsl.ts  canvas-demo.dsl.ts  card.dsl.ts  chat-app-page.dsl.ts  code-editor-page.dsl.ts  convenience-store-page.dsl.ts  cookpad-japan-page.dsl.ts  crm-dashboard-page.dsl.ts  crypto-dashboard-page.dsl.ts  cyberpunk-page.dsl.ts  daiso-japan-page.dsl.ts  dark-luxury-page.dsl.ts  dashboard-analytics-page.dsl.ts  design-system-docs-page.dsl.ts  divider-line.dsl.ts  education-platform-page.dsl.ts  email-client-page.dsl.ts  event-ticketing-page.dsl.ts  (+124 more)
renderer/: pyproject.toml
renderer/src/figma_component_dsl/: __main__.py  renderer.py
renderer/tests/: test_renderer.py
(+1300 files in other folders)
