[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "figma-component-dsl-renderer"
version = "0.1.0"
description = "PyCairo renderer for Figma Component DSL node dictionaries"
requires-python = ">=3.10"
dependencies = [
    "pycairo>=1.27.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
